--- a/lab-03_mergesort/Makefile
+++ b/lab-03_mergesort/Makefile
@@ -8,7 +8,7 @@ obj/mergesort.o:src/mergesort.c
 	gcc -c src/mergesort.c -I "include" -o obj/mergesort.o
 
 mergesort: obj/main.o obj/mergesort.o
-	gcc obj/main.o obj/mergesort.o -o mergesort
+	gcc obj/main.o obj/mergesort.o -o lab-03_mergesort
 
 clean:
-	rm -rf obj mergesort
+	rm -rf obj lab-03_mergesort
