--- a/lab-09_figures/Makefile
+++ b/lab-09_figures/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -O2 -Wall -Werror -std=c++11 -Iinclude
+CXXFLAGS = -O2 -Wall -Werror -std=c++11 -Iinclude -g3
 LDFLAGS = 
 
 EXE = lab-09_figures
