--- a/hw-02_huffman/Makefile
+++ b/hw-02_huffman/Makefile
@@ -1,29 +1,33 @@
 CXX = g++
-CXXFLAGS = -O2 -Wall -Werror -std=c++20 -Iinclude -g3
-LDFLAGS = 
+CXXFLAGS = -O2 -Wall -Werror -std=c++20 -Iinclude  -g3
+LDFLAGS =
 
 EXE = hw-02_huffman
-SRCDIR = src
 TEST = hw-02_huffman_test
-BINDIR = obj
+SRCDIR = src
+OBJDIR = obj
 
-OBJECTS = $(patsubst $(SRCDIR)/%.cpp,$(BINDIR)/%.o,$(wildcard $(SRCDIR)/*.cpp))
+OBJECTS = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(wildcard $(SRCDIR)/*.cpp))
+EXE_OBJECTS = $(filter-out $(OBJDIR)/test.o, $(OBJECTS))
 TEST_OBJECTS = $(filter-out $(OBJDIR)/main.o, $(OBJECTS))
 
 all: $(EXE) $(TEST)
 
-$(EXE): $(BINDIR) $(OBJECTS)
-	$(CXX) $(OBJECTS) -o $(EXE) $(LDFLAGS)
-	
-$(BINDIR)/%.o: $(SRCDIR)/%.cpp
-	$(CXX) $(CXXFLAGS) -c -MMD -o $@ $<
-
+$(EXE): $(EXE_OBJECTS)
+	$(CXX) $(EXE_OBJECTS) -o $(EXE) $(LDFLAGS)
 
 $(TEST): $(TEST_OBJECTS)
 	$(CXX) $(TEST_OBJECTS) -o $(TEST) $(LDFLAGS)
 
-$(BINDIR):
-	mkdir -p $(BINDIR)
+$(OBJDIR)/%.o: $(SRCDIR)/%.cpp | $(OBJDIR)
+	$(CXX) $(CXXFLAGS) -c -MMD -o $@ $<
+
+include $(wildcard $(OBJDIR)/*.d)
+
+$(OBJDIR):
+	mkdir -p $(OBJDIR)
 
 clean:
-	rm -rf $(BINDIR) $(EXE) $(TEST)
+	rm -rf $(OBJDIR) $(EXE) $(TEST) 
+
+.PHONY: clean all
